# graphs4cfd

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: README.md
examples/inference/mugs_gnn/: ns_mugs_gnn.ipynb
examples/inference/mus_gnn/: adv_mus_gnn.ipynb  ns_mus_gnn.ipynb
examples/inference/remus_gnn/: ns_remus_gnn.ipynb
examples/training/AdvMuSGNN/: AdvFourScaleGNN.py  AdvOneScaleGNN.py  AdvThreeScaleGNN.py  AdvTwoScaleGNN.py
examples/training/NsGMuSGNN/: NsFourGuillardSacleGNN.py  NsThreeGuillardSacleGNN.py  NsTwoGuillardSacleGNN.py
examples/training/NsMuGSGNN/: NsFourGuillardSacleGNN.py  NsThreeGuillardSacleGNN.py  NsTwoGuillardSacleGNN.py
examples/training/NsMuSGNN/: NsFourScaleGNN.py  NsOneScaleGNN.py  NsThreeScaleGNN.py  NsTwoScaleGNN.py
examples/training/NsREMuSGNN/: NsRotEquiTreeScaleGNN.py
graphs4cfd/: __init__.py  datasets.py  graph.py  loader.py  metrics.py  plot.py
graphs4cfd/nn/: __init__.py  blocks.py  gmus_gnn.py  losses.py  model.py  mugs_gnn.py  mus_gnn.py  remus_gnn.py
graphs4cfd/nn/weights/AdvMuSGNN/: README.md  README.txt
graphs4cfd/nn/weights/NsGMuSGNN/: README.txt
graphs4cfd/nn/weights/NsMuGSGNN/: README.md  README.txt
graphs4cfd/nn/weights/NsMuSGNN/: README.md  README.txt
graphs4cfd/nn/weights/NsREMuSGNN/: README.md  README.txt
graphs4cfd/transforms/: __init__.py  connect.py  geometric.py  interpolate.py  mugs.py  mus.py  noise.py  remus.py  scale.py  subset.py
